# local-ai-model-security-scanner

./: .gitignore  HOW_TO_USE.md  LICENSE  README.md  behavior.py  install.sh  model_scanner.py  onnx_deep.py  pyproject.toml  requirements.txt  trust.py
assets/: stakeholder-handout.html
config/: publishers.allowlist.json
docs/specs/: 2026-07-18--beginner-proofing.md  2026-07-18--onnx-deep-protobuf-scan.md  2026-07-18--readme-demo-gif.md
docs/superpowers/plans/: 2026-07-18-readme-demo-gif.md
examples/: DEMO.md  sample_handoff_report.md  sample_manifest.json  sample_scan_report.json
probes/: behavior_probes.json
scripts/: render_e2e_demo_gif.py
tests/: test_scanner.py  test_trust_behavior.py
