[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "model-scanner"
version = "0.1.0"
description = "Static safety scanner for local AI model files (pickle, safetensors, GGUF, ONNX)"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
dependencies = []

[project.scripts]
model-scanner = "model_scanner:cli"

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.3"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]  # so `import model_scanner` works from tests/
addopts = "-v --tb=short"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W"]
