[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "model-scanner"
version = "0.4.1"
description = "Tiered safety scanner for local AI models (file format, provenance, optional behavior probes)"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
dependencies = []

[project.scripts]
model-scanner = "model_scanner:cli"

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.3", "onnx>=1.15"]
onnx = ["onnx>=1.15"]

[tool.setuptools]
py-modules = ["model_scanner", "trust", "behavior", "onnx_deep"]

[tool.setuptools.package-data]
"*" = ["config/*.json", "probes/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W"]
